--- a/assets/css/light.css
+++ b/assets/css/light.css
@@ -2885,20 +2885,25 @@ fieldset:disabled .btn {
 }
 .btn-primary {
   --bs-btn-color: #fff;
-  --bs-btn-bg: #3b7ddd;
-  --bs-btn-border-color: #3b7ddd;
+  --bs-btn-bg: #7031a0;              /* main theme */
+  --bs-btn-border-color: #7031a0;
+
   --bs-btn-hover-color: #fff;
-  --bs-btn-hover-bg: #326abc;
-  --bs-btn-hover-border-color: #2f64b1;
-  --bs-btn-focus-shadow-rgb: 88, 145, 226;
+  --bs-btn-hover-bg: #662c90;        /* slightly darker */
+  --bs-btn-hover-border-color: #5f2788;
+
+  --bs-btn-focus-shadow-rgb: 112, 49, 160;
+
   --bs-btn-active-color: #fff;
-  --bs-btn-active-bg: #2f64b1;
-  --bs-btn-active-border-color: #2c5ea6;
+  --bs-btn-active-bg: #5a2680;       /* darker for pressed state */
+  --bs-btn-active-border-color: #542278;
   --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+
   --bs-btn-disabled-color: #fff;
-  --bs-btn-disabled-bg: #3b7ddd;
-  --bs-btn-disabled-border-color: #3b7ddd;
+  --bs-btn-disabled-bg: #7031a0;
+  --bs-btn-disabled-border-color: #7031a0;
 }
+
 .btn-secondary {
   --bs-btn-color: #fff;
   --bs-btn-bg: #6c757d;
@@ -14689,7 +14694,7 @@ body[data-sidebar-position="right"] {
   background-image: linear-gradient(-45deg, #222e3c 50%, #f2f4f6 0);
 }
 .settings-scheme-theme-colored {
-  background-image: linear-gradient(-45deg, #3b7ddd 50%, #f2f4f6 0);
+  background-image: linear-gradient(-45deg, #7031a0 50%, #f2f4f6 0);
 }
 .settings-scheme-theme-dark {
   background: #222e3c;
@@ -14734,7 +14739,7 @@ body[data-theme="light"] .sidebar {
   background: #fff;
 }
 body[data-theme="colored"] .sidebar {
-  background: linear-gradient(135deg, #266fd9, #2359a8 40%, #2359a8);
+  background: #056433;
 }
 .sidebar-content {
   display: flex;
@@ -14751,7 +14756,7 @@ body[data-theme="light"] .sidebar-content {
   background: #fff;
 }
 body[data-theme="colored"] .sidebar-content {
-  background: linear-gradient(135deg, #266fd9, #2359a8 40%, #2359a8);
+  background: #7031a0;
 }
 .sidebar-nav {
   flex-grow: 1;
@@ -15866,7 +15871,7 @@ body[data-theme="light"] .wrapper {
   background: #fff;
 }
 body[data-theme="colored"] .wrapper {
-  background: linear-gradient(135deg, #266fd9, #2359a8 40%, #2359a8);
+  background: #056433;
 }
 body[data-layout="boxed"] .wrapper {
   border-left: 1px solid #dee2e6;
