--- a/assets/css/modal.css
+++ b/assets/css/modal.css
@@ -640,6 +640,15 @@ body::before {
     font-weight: 600;
     color: var(--dark);
 }
+input[type=number]::-webkit-inner-spin-button,
+input[type=number]::-webkit-outer-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
+
+input[type=number] {
+    -moz-appearance: textfield;
+}
 
 .payment-value.total-amount {
     color: var(--primary);
